fixed alignment issues with closing icon on create author and book

--- a/src/assets/styles/partials/_book-section.scss
+++ b/src/assets/styles/partials/_book-section.scss
@@ -79,6 +79,17 @@
         cursor: pointer;
       }
 
+      .col-lg-10{
+        .row {
+          .col-2 {
+            align-self: center;
+            display: flex;
+            justify-content: center;
+            padding-left: 42px;
+          }
+        }
+      }
+
       .form-label {
         font-size: 0.7em;
       }
