--- a/src/assets/styles/partials/_footer.scss
+++ b/src/assets/styles/partials/_footer.scss
@@ -1,8 +1,7 @@
 .footer-dark {
-  padding: 30px 5px 10px 5px;
+  padding: 30px 15px 10px 15px;
   color: #f3faff;
   background-color: #282d32;
-  width: 100%;
   height: auto;
 
   h3 {
@@ -32,7 +31,7 @@
 
   .item.text {
     margin-bottom: 36px;
-
+    padding: 10px;
     p {
       opacity: 0.6;
       margin-bottom: 0;
@@ -41,6 +40,7 @@
 
   .item-social {
     justify-content: center;
+    width: 100%;
 
     a {
       font-size: 1.2em;
@@ -67,6 +67,7 @@
     opacity: 0.5;
     font-size: 1em;
     margin-bottom: 0;
+    width: 100%;
   }
 }
 
